--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vincent!</title>
+  <title>Sakine G</title>
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
