--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main-content">
       <div>
         <ul>
-          <li id="facebook" class="social"><a href="#">Facebook</a></li>
+          <li id="facebook" class="social"><a href="www.facebook.com/amoriumjewelry" target="_blank">Facebook</a></li>
           <li class="social"><a href="#">LinkedIn</a></li>
           <li class="social"><a href="#">Github</a></li>
           <li class="social"><a href="#">My Resume</a></li>
@@ -24,8 +24,9 @@
       </div>
       <div>
         <h2>About me</h2>
-        <p>90's pinterest wayfarers letterpress synth, edison bulb schlitz polaroid aesthetic. Heirloom green juice raw denim biodiesel. Ramps cardigan kale chips pork belly direct trade bushwick hot chicken poke. Microdosing subway tile tousled flannel, brunch lyft seitan single-origin coffee bicycle rights green juice. Live-edge dreamcatcher freegan, selfies raw denim franzen lumbersexual paleo kinfolk gastropub tofu. Af fap chia cardigan semiotics synth, health goth post-ironic. Tacos mustache lumbersexual, butcher everyday carry gochujang hashtag godard yuccie sartorial austin wayfarers brunch mixtape.</p>
-        <p>Narwhal cliche actually woke, chicharrones glossier cray next level mumblecore asymmetrical synth. Prism tote bag next level quinoa, pabst tilde fam blue bottle ethical. Listicle drinking vinegar affogato, actually flannel raw denim shoreditch iceland twee stumptown DIY sustainable art party. Pickled marfa bespoke VHS, schlitz etsy poutine street art jianbing hella. Leggings sriracha tattooed biodiesel wolf. Fingerstache polaroid pinterest ramps. Affogato pug small batch chicharrones ethical.</p>
+        <p>Amorium offers an alternative to the current fast fashion trend by making jewelry that is designed to last both in style and durability. Each necklace, bracelet, earring, ear cuff, and ring is designed in NYC and handcrafted by master silversmiths using traditional Aegean techniques. Each piece gets the love it deserves so that it can be worn with love for years.
+
+</p>
       </div>
       <div id="projects" class="clearfix">
         <div class="project ">
