--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="main-content">
       <div>
         <ul>
-          <li id="facebook" class="social"><a href="www.facebook.com/amoriumjewelry" target="_blank">Facebook</a></li>
-          <li class="social"><a href="#">LinkedIn</a></li>
+          <li id="facebook" class="social"><a href="https://www.facebook.com/amoriumjewelry" target="_blank">Facebook</a></li>
+          <li class="social"><a href="https://www.Twitter.com/amoriumjewelry" target="_blank" > Twitter</a></li>
           <li class="social"><a href="#">Github</a></li>
           <li class="social"><a href="#">My Resume</a></li>
         </ul>
