--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id="projects" class="clearfix">
         <div class="project ">
           <h2>Project 1</h2>
-          <img src="http://lorempixel.com/400/400/cats/1" alt="">
+          <img src="resume folder/sgulec.github.io/images/1" alt="">
           <p>Blue bottle pinterest williamsburg, lo-fi scenester trust fund twee. Brooklyn chia copper mug banjo vape craft beer kickstarter celiac letterpress try-hard tacos. IPhone meggings put a bird on it ennui flannel. Man bun man braid kogi, trust fund mixtape synth typewriter affogato VHS. Edison bulb cronut VHS, typewriter disrupt mlkshk occupy chicharrones vaporware artisan deep v hot chicken gentrify. Poke mixtape pabst chicharrones jianbing photo booth enamel pin, shoreditch succulents. Subway tile blog chambray, seitan helvetica prism flexitarian mumblecore fanny pack offal viral distillery.</p>
         </div>
         <div class="project ">
